# ai-dev-kit

./: README.md  TODO.md  install.py  install.sh
.github/scripts/: validate_skills.py
.github/workflows/: ci.yml
.test/skills/_routing/: ground_truth.yaml
.test/skills/databricks-lakebridge-reconcile/: ground_truth.yaml
SPECS/: TESTS_FROM_MMF_AGENTS.md
databricks-skills/: install_skills.sh
databricks-tools-core/databricks_tools_core/: auth.py
specs/databricks-lakebridge-reconcile/: TEST_SPEC_TIER1.md
test/tier1/lakebridge_reconcile/: conftest.py  duckdb_backend.py  mock_tools.py  pyproject.toml  test_config_generation.py  test_notebook_generation.py
